[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforce"
version = "0.1.0"
description = "A Python package for force sensor data collection and visualization"
readme = "README.md"
authors = [
    {name = "PyForce Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["force", "sensor", "data collection", "visualization", "robotics"]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/PyForce"
Documentation = "https://github.com/yourusername/PyForce/blob/main/README.md"
Repository = "https://github.com/yourusername/PyForce"
Issues = "https://github.com/yourusername/PyForce/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.9",
]

